k8s/gitops/apps/expose-hubble/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca
  labels:
    egress.zone: trust
spec:
  ingressClassName: trust
  tls:
    - hosts: ['hubble.apps.klab.internal']
      secretName: hubble-tls
  rules:
    - host: hubble.apps.klab.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
